# project-template

./: cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh
